[project]
name = "crypto-helper"
version = "0.1.0"
description = "Domain package for the OpenClaw-integrated crypto helper workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.4.1",
    "typer>=0.12.0",
]

[project.scripts]
crypto-helper = "crypto_helper.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "types-pyyaml>=6.0.12.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/crypto_helper/data/full_structured_2026-02-28_085344"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
exclude = ["^src/crypto_helper/data/full_structured_2026-02-28_085344/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
